CMAKE_MINIMUM_REQUIRED ( VERSION 3.5 )

PROJECT ( nuklear )

FIND_PACKAGE ( OpenGL REQUIRED )
FIND_PACKAGE ( GLEW REQUIRED )
FIND_PACKAGE ( GLFW3 REQUIRED )

SET ( NUKLEAR_REQUIRED_LINK_LIBRARIES
  ${OPENGL_egl_LIBRARY}
  ${OPENGL_gl_LIBRARY}
  ${OPENGL_glu_LIBRARY}
  ${GLEW_GLEW_LIBRARY}
  ${GLFW3_glfw_LIBRARY}
  m
  )
 
ADD_SUBDIRECTORY ( example )
ADD_SUBDIRECTORY ( demo )
